update the page

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
       <section id="downloads">
         <span class="inner">
-          <a href="https://github.com/Ed-ITSolutions/KashflowAPI/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/Ed-ITSolutions/KashflowAPI/tarball/master" class="tgz"><em>download</em> .TGZ</a>
+          <a href="https://rubygems.org/gems/kashflow_api" class="zip"><em>download</em> .gem</a><a href="https://github.com/Ed-ITSolutions/KashflowAPI/tarball/master" class="tgz"><em>download</em> .TGZ</a>
         </span>
       </section>
 
@@ -46,49 +46,63 @@
 
 
       <section id="main_content">
-        <h1>KashflowApi</h1>
+		  <p>KashflowAPI is a ruby wrapper for the <a href="http://www.kashflow.com" target="_BLANK">Kashflow</a> API (Documentation at <a href="http://www.accountingapi.com" target="_BLANK">www.accountingapi.com</a>).</p>
+		  <p>KashflowAPI provides an active record style interface for the API allowing for:<pre>Customer.find(Customer_Code)</pre></p>
+		  <p><i>KashflowAPI was written by <a href="http://www.ed-itsolutions.com">Ed-IT Solutions</a> and is free for anyone to use, we only ask that you attribute the code to us if you use it.</i></p>
 
-<p>KashflowApi provides an Active Record like interface to the Kashflow API.</p>
+		  <h1>Usage</h1>
 
-<h1>Usage</h1>
+		  <p>Before you can query the API you need to configure it, do this by adding teh following code to the top of your program, or a rails initializer:</p>
 
-<p>At the beginning of your program, or in an rails initializer call the configure block like so:</p>
-
-<pre><code>KashflowApi.configure do |c|
-    c.username = "Username"
-    c.password = "Password"
-    c.loggers = false
+		  <pre><code>
+KashflowApi.configure do |c|
+	c.username = "Username"
+	c.password = "Password"
+	c.loggers = false
 end
-</code></pre>
+		</code></pre>
 
-<p>I recommend settings loggers to false so that you don't get all the soap exchanges echoed out.</p>
+		<p><i>Username</i> and <i>Password</i> are your login details to Kashflow, they <b>have</b> to be in plain text (sorry) its a <a href="http://www.kashflow.com/developers/soap-api/methods-usage/">limitation of the API</a></p>
+		
+		<p>Loggers is how you want Savon to output, if you omit this option Savon will output everything to STDOUT which results in a couple of hundred lines per request, great for development but in production you will want to set it to false.</p>
 
-<p>You can now call methods on the models e.g.</p>
+		<p>Once thats setup you can call methods on the KashflowAPI models, for example to list all customers:</p>
 
-<pre><code>KashflowApi::Customer.all
-</code></pre>
+		<pre><code>KashflowApi::Customer.all</code></pre>
+		
+		<p>If you wanted to find a customer with the code <i>CUST01</i> then you would use:</p>
+		
+		<pre><code>KashflowApi::Customer.find("CUST01")</code></pre>
+		
+		<p>This would return an instance of KashflowAPI::Customer which you can interact with and save changes to. For example to set the first line of the address to <i>foo</i> you would:</p>
+		
+		<pre><code>cust = KashflowApi::Customer.find("CUST01")
+cust.address1 = "foo"
+cust.save</code></pre>
 
-<h1>Unimplemented Methods</h1>
 
-<p>Some of the methods in the Kashflow API have not been implemented in this gem (yet)</p>
+		<h1>Supported Methods</h1>
+		
+		<p>You can gain access to any of the methods of the api calling it on <i>KashflowApi.api</i> for example the same search again:</p>
 
-<h2>Customers</h2>
+		<pre><code>Kashflow.api.get_customer("CUST01")</code></pre>
 
-<ul>
-<li>GetCustomersModifiedSince</li>
-<li>GetCustomerSources</li>
-<li>GetCustomerVATNumber</li>
-<li>SetCustomerVATNumber</li>
-<li>GetCustomerCurrency</li>
-<li>SetCustomerCurrency</li>
-<li>GetCustomerAdvancePayments</li>
-</ul><h2>Quotes</h2>
+		<p>The response is a Savon opject so to get the hash for the returned customer you would need to use:</p>
+		
+		<pre><code>result.basic_hash["soap:Envelope"]["soap:Body"]["GetCustomerResponse"]["GetCustomerResult"]</code></pre>
+
+		<p>Any method from the API can be called but due to a lack of consistency some methods require the addition of special cases to the KashflowApi::ApiCall#argument_xml function. We have tried to be as non specific as possible but only the methods we have tested are garunteed to work.</p>
+		
+		<h1>Wiki</h1>
+
+		<p>For more documentation see the <a href="https://github.com/Ed-ITSolutions/KashflowAPI/wiki">wiki</a></p>
+
       </section>
 
       <footer>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <p>this project by <a href="https://github.com/Ed-ITSolutions">Ed-ITSolutions</a> can be found on <a href="https://github.com/Ed-ITSolutions/KashflowAPI">GitHub</a></p>
+            <p>this project by <a href="https://github.com/Ed-ITSolutions">Ed-IT Solutions</a> can be found on <a href="https://github.com/Ed-ITSolutions/KashflowAPI">GitHub</a></p>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
